iptables
# Generated by iptables-save v1.4.7 on Wed Apr  2 03:07:56 2014
*filter

# 入力(INPUT),転送(FORWARD)は許可したもの以外は破棄(DROP)
:INPUT DROP [26:2578]
:FORWARD DROP [0:0]

# 出力(OUTPUT)は基本的に許可(ACCEPT)
:OUTPUT ACCEPT [4:432]

# sshサーバへの接続は許可(sshのポート番号)
-A INPUT -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT

# 自サーバから接続済みの通信に関するパケットを許可
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# ローカルループバックインターフェースからのパケットは許可
-A INPUT -i lo -j ACCEPT

# icmpパケットを許可
-A INPUT -p icmp -j ACCEPT

# ip偽装対策1(プライベートアドレスからのパケットは破棄)
#-A INPUT -s 10.0.0.0/8 -j DROP
#-A INPUT -s 172.16.0.0/12 -j DROP
#-A INPUT -s 192.168.0.0/16 -j DROP

# ip偽装対策2(特殊なアドレスからのパケットを拒否)
# # ローカルループバックアドレス
-A INPUT -s 127.0.0.0/8 -j DROP
# # ローカルアドレス
-A INPUT -s 169.254.0.0/16 -j DROP
# # TEST-NET
-A INPUT -s 192.0.2.0/24 -j DROP
# # クラスD
-A INPUT -s 224.0.0.0/4 -j DROP
# # クラスE
-A INPUT -s 240.0.0.0/5 -j DROP

# Smarf攻撃対策(ブロードキャストパケットの破棄)
-A INPUT -d 0.0.0.0/8 -j DROP
-A INPUT -d 255.255.255.255/32 -j DROP
COMMIT
